# mlops-fraud-detection

./: .env.example  .gitignore  .pre-commit-config.yaml  BUILD_COMPLETE.md  CLAUDE.md  CONCEPTS_AND_TECHNOLOGIES.md  CONTRIBUTING.md  ENTERPRISE_GRADE_COMPLETE.md  GUIDE.md  INTERVIEW_PREP_GUIDE.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: BRANCH_PROTECTION_SETUP.md
.github/workflows/: cd.yml  ci.yml
airflow/: Dockerfile  requirements.txt
airflow/dags/: data_pipeline_dag.py  monitoring_dag.py  training_pipeline_dag.py
config/: logging_config.yaml  settings.py
deployment/: DEPLOYMENT_GUIDE.md
deployment/aws/terraform/: main.tf  terraform.tfvars.example  variables.tf
deployment/aws/terraform/modules/s3/: main.tf
deployment/aws/terraform/modules/vpc/: main.tf
docker/: fastapi.Dockerfile
mlflow/: Dockerfile
src/data/: generator.py  preprocessor.py  schema.py  validator.py
src/models/: base_model.py  evaluator.py  fraud_classifier.py  registry.py  trainer.py
src/monitoring/: __init__.py  drift_detector.py
src/serving/: api.py
src/utils/: logger.py  storage.py
tests/: conftest.py
tests/unit/: test_generator.py  test_preprocessor.py  test_schema.py
